proyecto-final/web-socket/web-socket-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-socket-svc
  namespace: public
spec:
  ports:
    - targetPort: 3001 # POD port
      port: 80 # service port
  selector: # POD labels
    app: web-socket
