proyecto-final/web-socket/web-socket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-socket-ingress
  namespace: public
spec:
  rules:
    - host: websocket.josue.kubelabs.dev
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: web-socket-svc
                port:
                  number: 80
